<resources>
    <string name="app_name">NumberGuess</string>


    <!--Main activity-->
    <string name="PLAY">Play</string>
    <string name="tv_text">Number Guess!</string>
    <string name="btn_text_leaderboard">Leaderboard</string>
    <string name="et_text">Enter your name</string>
    <string name="et_text_num">Enter your num</string>
    <string name="error_not_name">"Enter your name"</string>
    <string name="error_not_main_number">"Enter a number"</string>
    <string name="user_seconds">Choose the dificult and the time</string>
    <string-array name="seconds">
        <item>30s Hard</item>
        <item>40s Medium</item>
        <item>50s Easy</item>
    </string-array>



    <!--Activity game-->
    <string name="et_text_hint">Your answer</string>
    <string name="btn_go_text">GO!</string>
    <string name="btn_restart_text">Restart</string>
    <string name="btn_home_text">Home</string>
    <string name="error_not_number">"Enter a number"</string>
    <string name="last_answer">Your last answer:</string>
        <!--toast-->
        <string name="text_toast">"Starting a new game"</string>


        <!--if (userGuess == solution)-->
        <string name="text_congratulation">(: CONGRATULATIONS "</string>
        <string name="emoji"> ;) </string>
        <string name="text_userGuess_is_the_same_solution">Your SCORE: </string>

        <!--if (userGuess < solution && absUserGuess > 15)-->
        <string name="text_cold_higher">COLD, you need to go much higher!! </string>

        <!--if (userGuess < solution && absUserGuess < 15) -->
        <string name="text_hot_bit_higher">HOT, you need to go a bit higher :)</string>

        <!--if (userGuess > solution && absUserGuess >= 15)-->
        <string name="text_cold_not_so_high">COLD, not so high!!</string>

        <!--if (userGuess > solution && absUserGuess < 15)-->
        <string name="text_hot_bit_too_high">HOT, you went only a bit too high ;)</string>

        <!--if (score <= 0) -->
        <string name="text_so_bad">"You're so bad in this game, Bye "</string>

    <!--timer messages-->
    <string name="text_end_time">END</string>
    <string name="text_score_end_time">Your SCORE: 0</string>

    <!--Activity LeaderboardActivity-->


</resources>
