<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="bau.com.numberguess.MainActivity">

    <TextView android:id="@+id/number_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/tv_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        />

    <Button android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="handleButtonClick"
        android:text="@string/PLAY"
        android:textSize="25sp"
        android:background="@color/btn_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        />

    <Button android:id="@+id/btn_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_leaderboard"
        android:onClick="leaderBoard"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/btn_leaderboard"
        />

    <EditText android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/number_guess"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/et_text"
        />



</android.support.constraint.ConstraintLayout>
